--- a/Anagrams/level1.plist
+++ b/Anagrams/level1.plist
@@ -7,6 +7,7 @@
 		<array>
 			<string>a gentleman</string>
 			<string>elegant man</string>
+			<string>a g&lt;&lt;&lt;&lt;&lt;m&lt;&lt;</string>
 		</array>
 		<array>
 			<string>admirer</string>
