Erste Gleichung implementiert
Mit dazugehörigen Änderungen. jedoch ist die Reihenfolge in der
Gleichung strickt vorgeben und mehrere Lösungen sind nicht möglich.

--- a/Anagrams/level1.plist
+++ b/Anagrams/level1.plist
@@ -5,9 +5,9 @@
 	<key>anagrams</key>
 	<array>
 		<array>
-			<string>a gentleman</string>
-			<string>elegant man</string>
-			<string>a g&lt;&lt;&lt;&lt;&lt;m&lt;&lt;</string>
+			<string>5+6=11</string>
+			<string>3576</string>
+			<string>&gt;&lt;&gt;&lt;&lt;&lt;</string>
 		</array>
 	</array>
 	<key>timeToSolve</key>
